# openapi.json
@@ -4952,6 +4952,11 @@
                     "minimum": 0,
                     "exclusiveMinimum": true
                   },
+                  "anchor_item_id": {
+                    "type": "string",
+                    "format": "uuid",
+                    "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
+                  },
                   "limit": {
                     "default": 20,
                     "type": "integer",
